🤖 Committed by frederic.lestage@montral.ca

--- a/_data/logiciels_libres-open_source_software/accumulo.yml
+++ b/_data/logiciels_libres-open_source_software/accumulo.yml
@@ -1,38 +1,52 @@
---- 
-schemaVersion: "1.0"
-description: 
-  en: "Accumulo is a sorted, distributed key/value store  that provides robust, scalable data storage and retrieval."
-  fr: "Accumulo est un magasin clé/valeur trié et distribué qui fournit un stockage et une récupération de données robustes et évolutifs."
+schemaVersion: '1.0'
+description:
+  en: 'Accumulo is a sorted, distributed key/value store  that provides robust, scalable data storage and retrieval.'
+  fr: Accumulo est un magasin clé/valeur trié et distribué qui fournit un stockage et une récupération de données robustes et évolutifs.
 homepageURL:
-  en: "https://accumulo.apache.org/"
-  fr: "https://accumulo.apache.org/"
-licenses: 
-  - 
-    URL: 
-      en: "https://github.com/apache/accumulo/blob/master/LICENSE"
-      fr: "https://github.com/apache/accumulo/blob/master/LICENSE"
-    spdxID: "Apache-2.0"
-name: 
+  en: 'https://accumulo.apache.org/'
+  fr: 'https://accumulo.apache.org/'
+licenses:
+  - URL:
+      en: 'https://github.com/apache/accumulo/blob/master/LICENSE'
+      fr: 'https://github.com/apache/accumulo/blob/master/LICENSE'
+    spdxID: Apache-2.0
+name:
   en: Accumulo
   fr: Accumulo
-tags: 
+tags:
   en:
-    - "Application"
-  fr: 
-    - "Application"
-admininstrations: 
-  - 
-    adminCode: mtl_qc
-    uses: 
-      - 
-        contact: 
-          email: "libre@ville.montreal.qc.ca"
-        date: 
-          started: "2019-01-31"
-          metadataLastUpdated: "2019-05-06"
-        description: 
-          en: "Data managment."
-          fr: "Gestion des données."
-        name: 
-          en: "Software Database Management Systems."
-          fr: "Logiciels de systèmes de gestion de base de données."
+    - Application
+  fr:
+    - Application
+administrations:
+  - adminCode: mtl_qc
+    uses:
+      - contact:
+          email: libre@ville.montreal.qc.ca
+        date:
+          started: '2019-01-31'
+          metadataLastUpdated: '2019-05-06'
+        description:
+          en: Data managment.
+          fr: Gestion des données.
+        name:
+          en: Software Database Management Systems.
+          fr: Logiciels de systèmes de gestion de base de données.
+  - adminCode: aafc-aac
+    uses:
+      - contact:
+          email: frederic.lestage@montreal.ca
+          URL:
+            en: 'http://www.google.com/contact'
+            fr: 'http://www.google.ca/contact'
+          name: contact
+        date:
+          started: '2019-12-31'
+          metadataLastUpdated: '2019-07-03'
+        description:
+          en: descEN
+          fr: descFR
+        name:
+          en: !<tag:yaml.org,2002:js/undefined> ''
+          fr: !<tag:yaml.org,2002:js/undefined> ''
+        status: Alpha
