--- a/_data/logiciels_libres-open_source_software/mediawiki.yml
+++ b/_data/logiciels_libres-open_source_software/mediawiki.yml
@@ -2,7 +2,7 @@
 schemaVersion: '1.0'
 description:
   en: Wiki package written in PHP, originally for use on Wikipedia
-  fr: Ensemble Wiki développé à l’origine pour Wikipédia
+  fr: Ensemble Wiki développé à l'origine pour Wikipédia
 homepageURL:
   en: https://www.mediawiki.org/wiki/MediaWiki
   fr: https://www.mediawiki.org/wiki/MediaWiki/fr
