--- a/_data/normes_ouvertes-open_standards/html5.yml
+++ b/_data/normes_ouvertes-open_standards/html5.yml
@@ -3,15 +3,30 @@ schemaVersion: '1.0'
 administrations:
   - adminCode: tbs-sct
     contact:
-      email: ~
+      email: null
     references:
       - URL:
-          en: https://www.tbs-sct.gc.ca/pol/doc-eng.aspx?id=25875
-          fr: https://www.tbs-sct.gc.ca/pol/doc-fra.aspx?id=25875
+          en: 'https://www.tbs-sct.gc.ca/pol/doc-eng.aspx?id=25875'
+          fr: 'https://www.tbs-sct.gc.ca/pol/doc-fra.aspx?id=25875'
         name:
           en: Standard on Web Interoperability
           fr: Norme sur l’interopérabilité du Web
     status: mandatory-gc
+  - adminCode: aafc-aac
+    contact:
+      email: frederic.lestage@montreal.ca
+      URL:
+        en: 'http://www.google.com/contact'
+        fr: 'http://www.google.ca/contact'
+      name: contact
+    references:
+      - URL:
+          en: 'http://www.google.com/ref'
+          fr: 'http://www.google.ca/reference'
+        name:
+          en: ref name
+          fr: nom ref
+    status: general gc
 date:
   created: '2018-01-23'
   metadataLastUpdated: '2018-11-15'
@@ -22,8 +37,8 @@ name:
   en: HyperText Markup Language 5
   fr: HyperText Markup Language 5
 specURL:
-  en: https://www.w3.org/TR/html5/
-  fr: https://www.w3.org/TR/html5/
+  en: 'https://www.w3.org/TR/html5/'
+  fr: 'https://www.w3.org/TR/html5/'
 standardCode: HTML5
 standardsOrg: W3C
 tags:
