Add filters for Level of governemnt to the Open Standards page

--- a/_data/normes_ouvertes-open_standards/utf-8.yml
+++ b/_data/normes_ouvertes-open_standards/utf-8.yml
@@ -12,7 +12,7 @@ administrations:
           en: Standard on Web Interoperability
           fr: Norme sur l’interopérabilité du Web
     status: mandatory-gc
-  - adminCode: bac-lac
+  - adminCode: lac-bac
     contact:
       email: ~
     references:
