--- a/_data/code/federal/asc-csa.yml
+++ b/_data/code/federal/asc-csa.yml
@@ -3,34 +3,47 @@ schemaVersion: '1.0'
 adminCode: asc-csa
 releases:
   - contact:
-      URL:
-        en: https://projects.eclipse.org/projects/technology.apogy/contact
-        fr: https://projects.eclipse.org/projects/technology.apogy/contact
       email: apogy-dev@eclipse.org
+      URL:
+        en: 'http://www.google.com/contact'
+        fr: 'http://www.google.ca/contact'
+      name: contact
+      phone: 123-456-7890
     date:
       created: '2015-09-28'
-      metadataLastUpdated: '2019-01-31'
+      metadataLastUpdated: '2019-07-05'
+      lastModified: '2019-01-31'
     description:
-      en: The one-stop-shop solution for operating robots, satellites and beyond
-      fr: Un logiciel polyvalent pour faire fonctionner des robots et des satellites
-    languages:
-      - Java
+      en: 'The one-stop-shop solution for operating robots, satellites and beyond'
+      fr: >-
+        Un logiciel polyvalent pour faire fonctionner des robots et des
+        satellites
     name:
       en: Apogy
       fr: Apogy
     licenses:
       - URL:
-          en: https://git.eclipse.org/c/apogy/apogy.git/tree/LICENSE
-          fr: https://git.eclipse.org/c/apogy/apogy.git/tree/LICENSE
+          en: 'https://git.eclipse.org/c/apogy/apogy.git/tree/LICENSE'
+          fr: 'https://git.eclipse.org/c/apogy/apogy.git/tree/LICENSE'
         spdxID: EPL-1.0
     repositoryURL:
-      en: https://git.eclipse.org/c/apogy/apogy.git
-      fr: https://git.eclipse.org/c/apogy/apogy.git
+      en: 'https://git.eclipse.org/c/apogy/apogy.git'
+      fr: 'https://git.eclipse.org/c/apogy/apogy.git'
     tags:
       en:
         - Robots
         - Space
+        - TagEN
       fr:
         - Robots
         - Espace
+        - TagFR
+    homepageURL:
+      en: 'http://www.google.com'
+      fr: 'http://www.google.ca'
+    languages:
+      - PHP
+      - MySQL
+      - JavaScript
+    status: Maintained
     vcs: git
