--- a/_data/code/federal/asc-csa.yml
+++ b/_data/code/federal/asc-csa.yml
@@ -4,15 +4,17 @@ adminCode: asc-csa
 releases:
   - contact:
       URL:
-        en: https://projects.eclipse.org/projects/technology.apogy/contact
-        fr: https://projects.eclipse.org/projects/technology.apogy/contact
+        en: 'https://projects.eclipse.org/projects/technology.apogy/contact'
+        fr: 'https://projects.eclipse.org/projects/technology.apogy/contact'
       email: apogy-dev@eclipse.org
     date:
       created: '2015-09-28'
       metadataLastUpdated: '2019-01-31'
     description:
-      en: The one-stop-shop solution for operating robots, satellites and beyond
-      fr: Un logiciel polyvalent pour faire fonctionner des robots et des satellites
+      en: 'The one-stop-shop solution for operating robots, satellites and beyond'
+      fr: >-
+        Un logiciel polyvalent pour faire fonctionner des robots et des
+        satellites
     languages:
       - Java
     name:
@@ -20,12 +22,12 @@ releases:
       fr: Apogy
     licenses:
       - URL:
-          en: https://git.eclipse.org/c/apogy/apogy.git/tree/LICENSE
-          fr: https://git.eclipse.org/c/apogy/apogy.git/tree/LICENSE
+          en: 'https://git.eclipse.org/c/apogy/apogy.git/tree/LICENSE'
+          fr: 'https://git.eclipse.org/c/apogy/apogy.git/tree/LICENSE'
         spdxID: EPL-1.0
     repositoryURL:
-      en: https://git.eclipse.org/c/apogy/apogy.git
-      fr: https://git.eclipse.org/c/apogy/apogy.git
+      en: 'https://git.eclipse.org/c/apogy/apogy.git'
+      fr: 'https://git.eclipse.org/c/apogy/apogy.git'
     tags:
       en:
         - Robots
@@ -33,4 +35,67 @@ releases:
       fr:
         - Robots
         - Espace
+    vcs: git
+  - contact:
+      email: frederic.lestage@montreal.ca
+      URL:
+        en: 'http://www.google.com/contact'
+        fr: 'http://www.google.ca/contact'
+      name: contact
+      phone: 123-456-7890
+    date:
+      created: '2019-07-02'
+      metadataLastUpdated: '2019-07-05'
+      lastModified: '2019-07-03'
+    description:
+      en: Best developper
+      fr: Meilleur développeur
+    name:
+      en: Frederic
+      fr: Frédéric
+    licenses:
+      - URL:
+          en: 'https://github.com/apache/accumulo/blob/master/LICENSE'
+          fr: 'https://github.com/apache/accumulo/blob/master/LICENSE'
+        spdxID: MIT
+    repositoryURL:
+      en: 'http://www.google.com'
+      fr: 'http://www.google.ca'
+    tags:
+      en:
+        - Web
+      fr:
+        - TagFR
+    downloadURL:
+      en: 'http://www.google.com'
+      fr: 'http://www.google.ca'
+    homepageURL:
+      en: 'http://www.google.com'
+      fr: 'http://www.google.ca'
+    languages:
+      - Java
+      - Python
+      - PHP
+      - MySQL
+      - 'C#'
+    organization:
+      en: organization
+      fr: organisation
+    partners:
+      URL:
+        en: 'http://www.google.com/partner'
+        fr: 'http://www.google.ca'
+      email: partner@montreal.ca
+      name:
+        en: partner
+        fr: partenaire
+    relatedCode:
+      - URL:
+          en: 'http://www.google.com'
+          fr: 'http://www.google.ca'
+        name:
+          en: relié
+          fr: relié
+    status: Maintained
+    version: 123sdf5
     vcs: git
