--- a/_config.yml
+++ b/_config.yml
@@ -1,13 +1,6 @@
-# Welcome to Jekyll!
-#
-# This config file is meant for settings that affect your whole blog, values
-# which you are expected to set up once and rarely need to edit after that.
-# For technical reasons, this file is *NOT* reloaded automatically when you use
-# 'jekyll serve'. If you change this file, please restart the server process.
-
 # Site settings
-baseurl: "/ore-ero" # the subpath of your site, e.g. /blog
-url: "https://canada-ca.github.io/ore-ero" # the base hostname & protocol for your site
+baseurl: "/ore-ero"
+url: "https://canada-ca.github.io/ore-ero"
 github_username: canada-ca
 github_repository: ore-ero
 prbot_url: "https://canada-pr-bot.herokuapp.com/"
@@ -18,469 +11,3 @@ wet_cdts_version: "v4_0_30"
 # Build settings
 markdown: kramdown
 include: ["_pages", "_json"]
-
-# General Translations
-title:
-  en: Open Resource Exchange
-  fr: Échange de ressources ouvert
-description:
-  en: Open source software used and released by Canadian public administrations
-  fr: Logiciels libres utilisés et diffusés par les administrations publiques Canadiennes
-index:
-  en: index.html
-  fr: accueil.html
-home:
-  en: Home
-  fr: Accueil
-language:
-  en: English
-  fr: Français
-SkipToMain:
-  en: Skip to main content
-  fr: Passer au contenu principal
-SkipToAbout:
-  en: Skip to "About this site"
-  fr: Passer à « À propos de ce site »
-LanguageSelection:
-  en: Language selection
-  fr: Sélection de la langue
-GCActivitiesInitiatives:
-  en: Government of Canada activities and initiatives
-  fr: Activités et initiatives du gouvernement du Canada
-GoC:
-  en: Government of Canada
-  fr: Gouvernement du Canada
-SearchAndMenus:
-  en: Menus
-  fr: Menus
-SearchWebsite:
-  en: Search website
-  fr: Recherchez le site Web
-SearchCanadaCa:
-  en: Search Canada.ca
-  fr: Rechercher dans Canada.ca
-Search:
-  en: Search
-  fr: Recherche
-TopicsMenu:
-  en: Topics menu
-  fr: Menu des sujets
-OpenSourceCode:
-  en: Open Source Code
-  fr: Code source ouvert
-OpenSourceSoftware:
-  en: Open Source Software
-  fr: Logiciels libres
-OpenStandards:
-  en: Open Standards
-  fr: Normes ouvertes
-OpenSourceCodeGroups:
-  en: Open Source Code Groups
-  fr: Groupes de code source ouvert
-FilterOptions:
-  en: Filter Options
-  fr: Options de filtrage
-LevelOfGovernment:
-  en: Level of government
-  fr: Niveau de gouvernement
-Organization:
-  en: Organization
-  fr: Organisation
-License:
-  en: License
-  fr: Licence
-Tag: 
-  en: Tag
-  fr: Étiquette
-Filter:
-  en: Filter
-  fr: Filtrer
-Clear:
-  en: Clear
-  fr: Effacer
-ProjectName:
-  en: Project Name
-  fr: Nom du projet
-CodeLanguage:
-  en: Language
-  fr: Langage
-RelatedCode:
-  en: Related Code
-  fr: Code Associé
-Status:
-  en: Status
-  fr: Statut
-CodeCreated:
-  en: Created
-  fr: Créé
-CodeStarted:
-  en: Started
-  fr: Lancé
-LastUpdatedCode:
-  en: Last updated
-  fr: Dernière mise à jour
-LastModifiedCode:
-  en: Last modified
-  fr: Dernière modification
-ContactPhoneCode:
-  en: "Contact phone (###-###-####)"
-  fr: "Numéro du contact (###-###-####)"
-VersionControlSystemCode:
-  en: Version Control System
-  fr: Système de contrôle de version
-MandatoryField:
-  en: Mandatory
-  fr: Obligatoire
-Federal:
-  en: Federal
-  fr: Fédéral
-Provincial:
-  en: Provincial
-  fr: Provincial
-Municipal:
-  en: Municipal
-  fr: Municipal
-Aboriginal:
-  en: Aboriginal
-  fr: Aborigène
-
-# Open Source Code (Schema and Form)
-SchemaVersionCode:
-  en: ORE metadata schema version
-  fr: Version du schéma de métadonnées de l'ERO  
-SchemaVersionCodeDesc:
-  en: The version of the ORE metadata schema for open source code. This is currently version 1.0.
-  fr: La version du schéma de métadonnées ORE pour code soure ouvert. Il s'agit actuellement de la version 1.0.
-AdminCode:
-  en: Administration code
-  fr: Code d'administration
-AdminCodeDesc:
-  en: The code for the Canadian public administration. See the <a href="https://github.com/canada-ca/ore-ero/tree/master/_data/administrations">data files</a> to find your administration.
-  fr: Le code de l'administration publique Canadienne. Consultez les <a href="https://github.com/canada-ca/ore-ero/tree/master/_data/administrations">fichier de données</a> pour trouver votre administration.
-ProvinceCode:
-  en: Province Code
-  fr: Code de province
-RealeasesCodeDesc:
-  en: Information for each project or source code published.
-  fr: Informations pour chaque projet ou code source publié.
-
-ContactCodeDesc:
-  en: Contact information for the project.
-  fr: Coordonnées des contacts pour le projet.
-
-URLContactName:
-  en: URL
-  fr: URL
-URLContactCodeDesc:
-  en: English and French URLs that can be used to contact the project.
-  fr: URLs en français et en anglais qui peuvent être utilisés pour contacter le projet.
-URLContactCodeEN:
-  en: English URL
-  fr: URL anglais
-URLContactCodeFR:
-  en: French URL
-  fr: URL français
-
-EmailContactCode:
-  en: Email
-  fr: Courriel
-EmailContactCodeDesc:
-  en: Email address to contact the project. It should be an email address of where a contact can be directly reached.
-  fr: Une adresse courriel pour contacter le projet. Il devrait s'agir d'une adresse courriel à laquelle une personne-ressource peut être jointe directement.
-
-NameContactCode:
-  en: Name
-  fr: Nom
-NameContactCodeDesc:
-  en: The name of a contact for the project.
-  fr: Le nom de la personne-ressource pour le projet.
-
-PhoneContactCode:
-  en: Phone number
-  fr: Numéro de téléphone
-PhoneContactCodeDesc:
-  en: Phone number to contact the project.
-  fr: Numéro de téléphone pour contacter le projet.
-
-DateCodeDesc:
-  en: Dates describing the project.
-  fr: Dates décrivant le projet.
-
-CreatedCodeDesc:
-  en: The date the project was originally created, in YYYY-MM-DD or ISO 8601 format.
-  fr: La date du projet lorsqu'elle a été crée, au format AAAA-MM-JJ ou ISO 8601.
-StartedCodeDesc:
-  en: The date the project was originally started, in YYYY-MM-DD or ISO 8601 format.
-  fr: La date du projet lorsqu'elle a été lancé, au format AAAA-MM-JJ ou ISO 8601.
-LastModifiedCodeDesc:
-  en: The date the project was modified, in YYYY-MM-DD or ISO 8601 format.
-  fr: La date du projet lorsqu'elle a été modifiée, au format AAAa-MM-JJ ou ISO 8601.
-MetaDataLastUpdatedCodeDesc:
-  en: The date the metadata of the project was last updated, in YYYY-MM-DD or ISO 8601 format.
-  fr: La date de la dernière fois les "metadata" ont été mises à jour, au format AAAA-MM-JJ ou ISO 8601.
-
-DescriptionName:
-  en: Description
-  fr: Description
-DescriptionCodeDesc:
-  en: A one or two sentence description of the project.
-  fr: Une description en une ou deux phrases du projet.
-DescriptionCodeEN:
-  en: English description
-  fr: Description en anglais
-DescriptionCodeFR:
-  en: French description
-  fr: Description en francais
-
-DownloadName:
-  en: Download URL 
-  fr: URL de téléchargement 
-DownloadURLCodeDesc:
-  en: The english and french URLs where a distribution of the project can be found.
-  fr: Les URLs en francais et en anglais où une distribution du projet peut être trouvée.
-DownloadURLCodeEN:
-  en: English download URL
-  fr: URL de téléchargement en anglais 
-DownloadURLCodeFR:
-  en: French download URL
-  fr: URL de téléchargement en francais
-
-HomepageURLName:
-  en: Homepage URL  
-  fr: URL de la page d'accueil
-HomepageURLCodeDesc:
-  en: The English and French URLs of the project homepage.
-  fr: Les URLs en français et en anglais de la page d'accueil.
-HomepageURLCodeEN:
-  en: English homepage URL
-  fr: URL de la page d'accueil en anglais
-HomepageURLCodeFR:
-  en: French homepage URL
-  fr: URL de la page d'accueil en francais
-
-LanguagesName:
-  en: Programming languages
-  fr: Langages de programmation
-LanguagesCodeDesc:
-  en: A list of the programming languages used in the project.
-  fr: Une liste des langages de programmation utilisés dans la projet.
-
-ProjectName:
-  en: Name
-  fr: Nom
-NameCodeDesc:
-  en: The English and French name of the project.
-  fr: Le nom du projet en français et en anglais.
-NameCodeEN:
-  en: English project name
-  fr: Nom du projet en anglais
-NameCodeFR:
-  en: French project name
-  fr: Nom du projet en français
-
-OrganizationName:
-  en: Organization
-  fr: Organisation
-OrganizationCodeDesc:
-  en: The English and French name of the organization or team to which the project belongs.
-  fr: Le nom de l'organisation ou l'équipe en francais et en anglais à laquelle le projet appartient.
-OrganizationCodeEN:
-  en: English organization name
-  fr: Nom de l'organisation en anglais
-OrganizationCodeFR:
-  en: French organization name
-  fr: Nom de l'organisation en français
-
-PartnersCodeDesc:
-  en: Information about each group partnering on the project.
-  fr: Renseignements sur chaque groupe partenaire du projet.
-
-URLPartnersName:
-  en: URL
-  fr: URL
-URLPartnersCodeDesc:
-  en: The english and french URL to a website about the partner.
-  fr: L'URL en anglais et en français d'un site Web à propos du partenaire.
-URLPartnersCodeEN:
-  en: English URL of partner
-  fr: URL du partenaire en anglais
-URLPartnersCodeFR:
-  en: French URL of partner
-  fr: URL du partenaire en francais
-
-EmailPartnersCode:
-  en: Email
-  fr: Courriel
-EmailPartnersCodeDesc:
-  en: The email address to contact the partner.
-  fr: L'adresse courriel pour contacter le partenaire.
-
-PartnersName:
-  en: Name
-  fr: Nom
-NamePartnersCodeDesc:
-  en: The english and french name of the partner.
-  fr: Le nom du partenaire en anglais et en français.
-NamePartnersCodeEN:
-  en: English name of partner
-  fr: Nom du partenaire en anglais
-NamePartnersCodeFR:
-  en: French name of partner
-  fr: Nom du partenaire en francais
-
-LicensesCodeDesc:
-  en: Information about each licence for the project.
-  fr: Renseignements sur chaque licence pour le projet.
-
-URLLicensesName:
-  en: URL
-  fr: URL
-URLLicensesCodeDesc:
-  en: The English and French URLs of licence.
-  fr: L'URL de la licence en français et en anglais.
-URLLicensesCodeDescEN:
-  en: English licence URL
-  fr: URL de la licence en anglais
-URLLicensesCodeDescFR:
-  en: French licence URL
-  fr: URL de la licence en francais
-
-SpdxIDLicencesName:
-  en: SPDX License identifier 
-  fr: Identifiant de licence SPDX 
-SpdxIDLicencesCodeDesc:
-  en: The SPDX Licence identifier - See <a href="https://spdx.org/licenses/">List of licences</a>.
-  fr: L'identifiant de licence SPDX - Consultez la <a href="https://spdx.org/licenses/">Liste des licences</a>.
-
-RepositoryURLName:
-  en: Code repository URL
-  fr: URL du dépôt de code
-RepositoryURLCodeDesc:
-  en: The English and French URLs of the public repository of the project, where the code is hosted.
-  fr: Les URL en français et en anglais du dépôt public du projet, où le code est hébergé.
-RepositoryURLCodeEN:
-  en: English repository URL
-  fr: URL du dépôt en anglais
-RepositoryURLCodeFR:
-  en: French repository URL
-  fr: URL du dépôt en francais
-
-RelatedCodeDesc:
-  en: Information about each library, framework, API or other related software used in this project.
-  fr: Informations sur chaque bibliothèque, plate-forme, API ou autre logiciel connexe utilisé dans ce projet.
-
-URLRelatedCodeName:
-  en: URL
-  fr: URL
-URLRelatedCodeDesc:
-  en: The english and french URLs of related software.
-  fr: L'URL anglais et francais d'un logiciel connexe.
-URLRelatedCodeEN:
-  en: English URL of related software
-  fr: URL anglais d'un logiciel connexe
-URLRelatedCodeFR:
-  en: French URL of related software
-  fr: URL francais d'un logiciel connexe
-
-RelatedCodeName:
-  en: Name
-  fr: Nom
-NameRelatedCodeDesc:
-  en: The english and french name of related software.
-  fr: Le nom d'un logiciel connexe en anglais et en francais.
-NameRelatedCodeEN:
-  en: Name of related software in english
-  fr: Nom d'un logiciel connexe en anglais
-NameRelatedCodeFR:
-  en: Name of related software in french
-  fr: Nom d'un logiciel connexe en francais
-
-StatusCodeName:
-  en: Development status
-  fr: Statut du développement
-StatusCodeDesc:
-  en: The development status of the project. Alpha, Beta, Maintained, Deprecated or Retired.
-  fr: Le statut du développement du projet. Alpha, Beta, Maintenu, Obsolète ou Retraité.
-
-TagsName:
-  en: Tags
-  fr: Étiquettes
-TagsCodeDesc:
-  en: A useful set of keywords to distinguish the various projects.
-  fr: Un ensemble de mots clés utiles pour distinguer les différents projets.
-TagsCodeEN:
-  en: List of English tags
-  fr: Liste d'étiquettes en anglais
-TagsCodeFR:
-  en: List of French tags
-  fr: Liste d'étiquettes en français
-
-VcsName:
-  en: Version control system
-  fr: Système de contrôle de version
-VcsCodeDesc:
-  en: A lowercase string with the name of the version control system that is being used for the project. For example, git, svn, ..
-  fr: Une chaîne de caractères en miniscule contenant le nom de la version du système de contrôle qui est utilisée dans le projet. Par exemple, git, svn, ..
-
-VersionName:
-  en: The latest version 
-  fr: La dernière version
-VersionCodeDesc:
-  en: The latest version for this project. For example, 1.0.0.
-  fr: La version de ce projet. Par  exemple, 1.0.0.
-
-InformationAboutSubmitter:
-  en: Information about submitter
-  fr: Des informations sur le déposant
-  
-FormSubmissionInProgress:
-  en: The form is being submitted...
-  fr: Le formulaire est en cours de soumission...
-FormSubmissionFail:
-  en: Something went wrong! Unable to submit form.
-  fr: Quelque chose s'est mal passé! Impossible de soumettre le formulaire.
-FormSubmissionSuccess:
-  en: Form was submitted!
-  fr: Le formulaire a été soumis!
-
-# Open Soruce Software (Schema and Form)
-SchemaVersionOssDesc:
-  en: The version of the ORE metadata schema for open source software.
-  fr: La version du schéma de métadonnées ORE pour les logiciels libres.
-NameUsesOss:
-  en: Name of the project activity
-  fr: Nom de l'activité du projet.
-DescriptionUsesOss:
-  en: Description of the project activity
-  fr: Description de l'activité du projet.
-NameUsesOssDesc:
-  en: The domain name of the project activity.
-  fr: Le nom du domaine de l'activité du projet.
-DescriptionUsesOssDesc:
-  en: A one or two sentence description of the project activity.
-  fr: Une description du domaine de l'activité du projet.
-
-# Other translations
-AddMoreTags:
-  en: Add more tags
-  fr: Ajouter plus de tags
-
-AddMoreLanguages:
-  en: Add more languages
-  fr: Ajouter plus de langues
-RelatedCodeForm:
-  en: The platforms or other software used in this project
-  fr: Les plateformes ou autres logiciels utilisés dans ce projet
-
-StatusName:
-  en: Development status of the project
-  fr: Statut de développement du projet
-MaitainedStatus:
-  en: Maintained
-  fr: Maintenu
-DeprecatedStatus:
-  en: Deprecated
-  fr: Déprécié
-RetiredStatus:
-  en: Retired
-  fr: Retraité
