--- a/_data/forms/config-oss.yml
+++ b/_data/forms/config-oss.yml
@@ -13,6 +13,17 @@ formGroups:
   - preset: tags
   - preset: hr
   - preset: adminCode
+  - preset: newAdmin
+    fields:
+      - preset: orgLevel
+      - widget: string
+        title: newAdminCode
+      - widget: select
+        title: ProvinceCode
+        options: [ab, bc, mb, nb, nl, nt, ns, nu, "on", pe, qc, sk, yt] # on is a yaml/liquid/jekyll keyword and thus must be escaped
+      - widget: string-i18n
+        title: Name
+        rule: alphanum-space
   - preset: contact
     phone: false
   - preset: dates
